# base

./: .gitignore  .gitmodules  Base.h  CMakeLists.txt  log.h  object.h  ref_ptr.h  singleton.h  spy_ptr.h
doc/memory/: object.md  ref_ptr.md  spy_ptr.md
inc/: Base.h  Event.h  implements.h  log.h  object.h  singleton.h
inc/Base/: Base.h  Event.h  EventListener.h  Visitor.h  create.h  implements.h  inherit.h  interface.h  log.h  node.h  object.h  platform.h  ref_ptr.h  singleton.h  spy_ptr.h  thread_utils.h  type_name.h  visitor.h
inc/Base/interfaces/: create.h  singleton.h  type_info.h  visitor.h
inc/Base/io/: Read.h  ReaderWriter.h  Write.h
inc/Base/memory/: Allocator.h  AllocatorPolicy.h  Manager.h  MemoryBlock.h  MemoryBlocks.h  MemorySlots.h  MemoryTracking.h  allocator.h  base_ptr.h  fwd_decl.h  group.h  id.h  managed_object.h  manager_acquire_retire.h  manager_base.h  memory_manager.h  object.h  ptr.h  ptr_base.h  ptr_ref.h  ref_counter.h  ref_ptr.h  scratch_memory.h  spy_ptr.h
inc/Base/nodes/: Group.h  Node.h  group.h  node.h
src/: Allocator.cpp  Manager.cpp  MemoryBlock.cpp  MemoryBlocks.cpp  MemorySlots.cpp
test/: MemorySlots_test.cpp  memory.cpp  object_test.cpp
tests/: CMakeLists.txt  MemorySlots.test.cpp  object.test.cpp  ref_counter.test.cpp
